# julmalloc

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README  README.MD  README.md
alloc/: CMakeLists.txt  defines.h  linked_list_mgmt.h  memory_mgmt.h  strats.h  types.h  utils.h
alloc/sources/: linked_list_mgmt.c  memory_mgmt.c  methods.c  storage.c  strats.c  utils.c
unittests/: CMakeLists.txt  defines.h  test_that_crash.c
unittests/alloc/: alignment.c  calloc.c  free.c  malloc.c  realloc.c  special_free.c  special_realloc.c
unittests/components/: add_entry.c  expand_list.c  remove_entry.c
unittests/strats/: bestfit.c  firstfit.c  nextfit.c  worstfit.c
